# src/features/playlist/types.ts
@@ -49,6 +49,11 @@ export type PlaylistVideoWithInclude = Prisma.PlaylistVideoGetPayload<{
 }>;
 
 export const playlistWithVideosInclude = {
+    _count: {
+        select: {
+            playlistVideos: true,
+        },
+    },
     playlistVideos: {
         include: playlistVideoInclude,
     },
@@ -76,4 +81,6 @@ export type PlaylistDTO = {
     name: string;
     description?: string | null;
     videos: PlaylistVideoDTO[];
+    coverUrl: string | null;
+    numVideos: number;
 };
